# config_io

./: CMakeLists.txt  README.md  test.kdev4
config/: config.ini
include/: config_io.h
src/: CMakeLists.txt  config_io.cpp  config_io.h
test/: CMakeLists.txt  config.ini  main.cpp
